feat: Add signup page

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,7 +1,8 @@
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons';
 
-@import "./pages/sign_in.scss";
+@import "./pages/signin.scss";
+@import "./pages/signup.scss";
 
 html, body {
   height: 100%;
