--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,11 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
   </head>
 
-  <body class="bg-body-tertiary">
-    <%= yield %>
+  <body class="bg-body">
+    <% if content_for?(:content) %>
+      <%= yield :content %>
+    <% else %>
+      <%= yield %>
+    <% end %>
   </body>
 </html>
